gcc-14.2.0/gcc/testsuite/gm2/pim/fail/constvar.mod
version https://git-lfs.github.com/spec/v1
oid sha256:e5bab76b002810bcffde15b2caeb66a1c59071df5190e98523052e9342ef18ea
size 73
